--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,2 +1,29 @@
 1.0.1:
-    - Initialize plugin.
+    - 'Initialize plugin.'
+1.0.2:
+    - 'Created table adrisonluz_nanotask_tasks'
+    - builder_table_create_adrisonluz_nanotask_tasks.php
+1.0.3:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks.php
+1.0.4:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_2.php
+1.0.5:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_3.php
+1.0.6:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_4.php
+1.0.7:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_5.php
+1.0.8:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_6.php
+1.0.9:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_7.php
+1.0.10:
+    - 'Updated table adrisonluz_nanotask_tasks'
+    - builder_table_update_adrisonluz_nanotask_tasks_8.php
